traceback.txt
I'm sorry, but an uncaught exception occurred.

While running game code:
  File "game/chapter1a.rpy", line 100, in script
    voss "...día 47 del experimento. INFINIT-0 demuestra capacidades cognitivas muy por encima de lo proyectado."
  File "<none>", line 1
    grabación 1987
             ^^^^ 
SyntaxError: invalid syntax

-- Full Traceback ------------------------------------------------------------

Traceback (most recent call last):
  File "game/chapter1a.rpy", line 100, in script
    voss "...día 47 del experimento. INFINIT-0 demuestra capacidades cognitivas muy por encima de lo proyectado."
  File "renpy/ast.py", line 2925, in execute
    Say.execute(self)
    ~~~~~~~~~~~^^^^^^
  File "renpy/ast.py", line 991, in execute
    renpy.exports.say(who, what, *args, **kwargs)
    ~~~~~~~~~~~~~~~~~^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "renpy/exports/sayexports.py", line 129, in say
    who(what, *args, **kwargs)
    ~~~^^^^^^^^^^^^^^^^^^^^^^^
  File "renpy/character.py", line 1548, in __call__
    who = self.prefix_suffix("who", self.who_prefix, who, self.who_suffix)
          ~~~~~~~~~~~~~~~~~~^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "renpy/character.py", line 1466, in prefix_suffix
    return sub(prefix) + sub(body) + sub(suffix)
                         ~~~^^^^^^              
  File "renpy/character.py", line 1443, in sub
    return renpy.substitutions.substitute(s, scope=scope, force=force, translate=translate)[0]
           ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^   
  File "renpy/substitutions.py", line 355, in substitute
    s = interpolate(s, variables)  # type: ignore
        ~~~~~~~~~~~^^^^^^^^^^^^^^                
  File "renpy/substitutions.py", line 89, in interpolate
    raise e
  File "renpy/substitutions.py", line 81, in interpolate
    value = renpy.python.py_eval(code, {}, scope)
            ~~~~~~~~~~~~~~~~~~~~^^^^^^^^^^^^^^^^^
  File "renpy/python.py", line 1303, in py_eval
    code = py_compile(code, "eval")
           ~~~~~~~~~~^^^^^^^^^^^^^^
  File "renpy/python.py", line 1260, in py_compile
    raise e
  File "renpy/python.py", line 1190, in py_compile
    tree = compile(source, filename, py_mode, ast.PyCF_ONLY_AST | flags, True)
           ~~~~~~~^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "<none>", line 1
    grabación 1987
             ^^^^ 
SyntaxError: invalid syntax

macOS-26.2-arm64-arm-64bit arm64
Ren'Py 8.5.2.26010301
NULL>ZONE 1.0.0
Thu Feb 26 06:17:28 2026
